Remove 'Agent' definition
