# openapi_server/models/agent.py
@@ -1,122 +1,0 @@
-# coding: utf-8
-
-from datetime import date, datetime
-
-from typing import List, Dict, Type
-
-from openapi_server.models.base_model_ import Model
-from openapi_server import util
-
-
-class Agent(Model):
-    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
-
-    Do not edit the class manually.
-    """
-
-    def __init__(self, type: str=None, name: str=None, template: str=None):
-        """Agent - a model defined in OpenAPI
-
-        :param type: The type of this Agent.
-        :param name: The name of this Agent.
-        :param template: The template of this Agent.
-        """
-        self.openapi_types = {
-            'type': str,
-            'name': str,
-            'template': str
-        }
-
-        self.attribute_map = {
-            'type': 'type',
-            'name': 'name',
-            'template': 'template'
-        }
-
-        self._type = type
-        self._name = name
-        self._template = template
-
-    @classmethod
-    def from_dict(cls, dikt: dict) -> 'Agent':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :return: The Agent of this Agent.
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def type(self):
-        """Gets the type of this Agent.
-
-        Orchestration technology to deploy the pipeline stages
-
-        :return: The type of this Agent.
-        :rtype: str
-        """
-        return self._type
-
-    @type.setter
-    def type(self, type):
-        """Sets the type of this Agent.
-
-        Orchestration technology to deploy the pipeline stages
-
-        :param type: The type of this Agent.
-        :type type: str
-        """
-        allowed_values = ["docker_compose"]  # noqa: E501
-        if type not in allowed_values:
-            raise ValueError(
-                "Invalid value for `type` ({0}), must be one of {1}"
-                .format(type, allowed_values)
-            )
-
-        self._type = type
-
-    @property
-    def name(self):
-        """Gets the name of this Agent.
-
-        Container name
-
-        :return: The name of this Agent.
-        :rtype: str
-        """
-        return self._name
-
-    @name.setter
-    def name(self, name):
-        """Sets the name of this Agent.
-
-        Container name
-
-        :param name: The name of this Agent.
-        :type name: str
-        """
-
-        self._name = name
-
-    @property
-    def template(self):
-        """Gets the template of this Agent.
-
-        Relative path (in the repository) to the container definition
-
-        :return: The template of this Agent.
-        :rtype: str
-        """
-        return self._template
-
-    @template.setter
-    def template(self, template):
-        """Sets the template of this Agent.
-
-        Relative path (in the repository) to the container definition
-
-        :param template: The template of this Agent.
-        :type template: str
-        """
-
-        self._template = template
